--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-medialibrary": "^11.14",
+        "spatie/laravel-permission": "^6.23",
         "spatie/laravel-settings": "^3.4",
         "spatie/laravel-sluggable": "^3.7"
     },
